@@ -1,3 +1,8 @@
+Allow missingValueAction to be specified for the sortspec string - 
+function yaz_sort_spec. By default, the missing value action is null.
+Use ! to specify "abort". Use = followed by stringvalue to specify default
+value.
+
 Ensured that Present-handler (if defined) is called in GFS before any call to
 fetch-hhndler.  This now includes piggy-backed presents as well as SRW/U
 searchRetrieve requests.
